<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        android:text="@string/invitation_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.example.androidanimation.AniDroid
        android:id="@+id/anidroid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginTop="@dimen/margin_common"
        android:layout_marginBottom="@dimen/margin_common"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/circle"
        android:onClick="onLeftArm"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginTop="@dimen/margin_common"
        android:layout_marginBottom="@dimen/margin_common"
        app:layout_constraintEnd_toEndOf="@+id/anidroid"
        app:layout_constraintStart_toStartOf="@+id/anidroid"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintTop_toTopOf="@+id/anidroid"
        app:layout_constraintBottom_toBottomOf="@+id/anidroid"
        app:layout_constraintVertical_bias="0.49"
        android:contentDescription="@string/left_arm_handler" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/circle"
        android:onClick="onRightArm"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginTop="@dimen/margin_common"
        android:layout_marginBottom="@dimen/margin_common"
        app:layout_constraintStart_toStartOf="@+id/anidroid"
        app:layout_constraintEnd_toEndOf="@+id/anidroid"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintTop_toTopOf="@+id/anidroid"
        app:layout_constraintBottom_toBottomOf="@+id/anidroid"
        app:layout_constraintVertical_bias="0.49"
        android:contentDescription="@string/right_arm_handler" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/circle"
        android:onClick="onHead"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginTop="@dimen/margin_common"
        android:layout_marginBottom="@dimen/margin_common"
        app:layout_constraintStart_toStartOf="@+id/anidroid"
        app:layout_constraintEnd_toEndOf="@+id/anidroid"
        app:layout_constraintTop_toTopOf="@+id/anidroid"
        app:layout_constraintBottom_toBottomOf="@+id/anidroid"
        app:layout_constraintVertical_bias="0.323"
        app:layout_constraintHorizontal_bias="0.34"
        android:contentDescription="@string/head_handler" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/circle"
        android:onClick="onSit"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginTop="@dimen/margin_common"
        android:layout_marginBottom="@dimen/margin_common"
        app:layout_constraintStart_toStartOf="@+id/anidroid"
        app:layout_constraintEnd_toEndOf="@+id/anidroid"
        app:layout_constraintTop_toTopOf="@+id/anidroid"
        app:layout_constraintBottom_toBottomOf="@+id/anidroid"
        app:layout_constraintVertical_bias="0.69"
        app:layout_constraintHorizontal_bias="0.34"
        android:id="@+id/imageView"
        android:contentDescription="@string/squat_handler" />

</android.support.constraint.ConstraintLayout>